--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,5 @@ win_temp_dir: 'c:\Program Files\ansible'
 win_log_dir: 'c:\ProgramData\ansible\log'
 
 win_aptsimulator_v: 0.7
+win_aptsimulator_dl: true
+win_aptsimulator_execute: true
