--- a/tasks/testing-aptsimulator.yml
+++ b/tasks/testing-aptsimulator.yml
@@ -12,14 +12,17 @@
   get_url:
     url: "https://github.com/NextronSystems/APTSimulator/releases/download/v{{ win_aptsimulator_v }}/APTSimulator_pw_apt.zip"
     dest: "{{ win_temp_dir }}/APTSimulator_pw_apt.zip"
+  when: win_aptsimulator_dl
 
 - name: Testing Detections | Unarchive NextronSystems APTSimulator
   win_shell: 7zip e -y -tzip -papt APTSimulator_pw_apt.zip
   args:
     chdir: "{{ win_temp_dir }}"
+  when: win_aptsimulator_dl
 
 ## FIXME! batch mode?
 - name: Testing Detections | Execute NextronSystems APTSimulator
   win_shell: APTSimulator.bat
   args:
     chdir: "{{ win_temp_dir }}/APTSimulator"
+  when: win_aptsimulator_execute
