--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -2,5 +2,8 @@
 
 - hosts: all
   become_method: runas
+  vars:
+    - win_aptsimulator_dl: false
+    - win_aptsimulator_execute: false
   roles:
     - juju4.win-aptsimulator
