--- a/appveyor.yml
+++ b/appveyor.yml
@@ -88,7 +88,7 @@ after_test:
 - cmd: |
     %CYG_BASH% -lc 'ansible-playbook -i /cygdrive/c/projects/ansible-win-aptsimulator/test/appveyor/inventory /cygdrive/c/projects/ansible-win-aptsimulator/test/integration/default/default.yml $ANSIBLE_EXTRA_VARS'
 - ps: Get-WinEvent -LogName 'Microsoft-Windows-Powershell/Operational' | Select -First 20
-- ps: Get-MpThreatDetection | Sort InitialDetection -Descending
+#- ps: Get-MpThreatDetection | Sort InitialDetection -Descending
 
 notifications:
 - provider: Email
