--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -3,7 +3,7 @@
 - hosts: all
   become_method: runas
   vars:
-    - win_aptsimulator_dl: false
+    - win_aptsimulator_dl: true
     - win_aptsimulator_execute: false
   roles:
     - juju4.win-aptsimulator
