--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -4,6 +4,6 @@
   become_method: runas
   vars:
     - win_aptsimulator_dl: true
-    - win_aptsimulator_execute: false
+    - win_aptsimulator_execute: true
   roles:
     - juju4.win-aptsimulator
