--- a/tasks/testing-aptsimulator.yml
+++ b/tasks/testing-aptsimulator.yml
@@ -24,5 +24,5 @@
 - name: Testing Detections | Execute NextronSystems APTSimulator
   win_command: "cmd.exe /c APTSimulator.bat"
   args:
-    chdir: "{{ win_temp_dir }}/APTSimulator"
+    chdir: "{{ win_temp_dir }}"
   when: win_aptsimulator_execute
