--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,5 @@ win_log_dir: 'c:\ProgramData\ansible\log'
 win_aptsimulator_v: 0.7
 win_aptsimulator_dl: true
 win_aptsimulator_execute: true
+
+win_aptsimulator_testing_inspec: true
