appveyor testing: add full suite to test local detections

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,7 @@ environment:
     CYG_BASH: C:\cygwin64\bin\sh
     ANSIBLE_VERSION: 2.3.3.0
     ANSIBLE_EXTRA_VARS:
+    SUITE: default
   - TARGET: cygwin64
     CYG_ROOT: C:\cygwin64
     CYG_SETUP: C:\cygwin64\setup-x86_64.exe
@@ -30,6 +31,7 @@ environment:
     CYG_BASH: C:\cygwin64\bin\sh
     ANSIBLE_VERSION: 2.4.3.0
     ANSIBLE_EXTRA_VARS:
+    SUITE: default
   - TARGET: cygwin64
     CYG_ROOT: C:\cygwin64
     CYG_SETUP: C:\cygwin64\setup-x86_64.exe
@@ -37,6 +39,15 @@ environment:
     CYG_BASH: C:\cygwin64\bin\sh
     ANSIBLE_VERSION: 2.5.0
     ANSIBLE_EXTRA_VARS:
+    SUITE: default
+  - TARGET: cygwin64
+    CYG_ROOT: C:\cygwin64
+    CYG_SETUP: C:\cygwin64\setup-x86_64.exe
+    CYG_CACHE: C:\cygwin64\var\cache\setup
+    CYG_BASH: C:\cygwin64\bin\sh
+    ANSIBLE_VERSION: 2.5.0
+    ANSIBLE_EXTRA_VARS:
+    SUITE: full
 matrix:
   fast_finish: true
 
@@ -78,15 +89,16 @@ install:
 - cmd: "%CYG_BASH% -lc 'mkdir -p /etc/ansible/roles'"
 - cmd: "%CYG_BASH% -lc 'cp /cygdrive/c/projects/ansible-win-aptsimulator/test/appveyor/ansible.cfg /etc/ansible'"
 - cmd: "%CYG_BASH% -lc 'cp -R /cygdrive/c/projects/ansible-win-aptsimulator /etc/ansible/roles/juju4.win-aptsimulator'"
+- cmd: "%CYG_BASH% -lc 'sh -x /cygdrive/c/projects/ansible-win-aptsimulator/get-dependencies.sh'"
 
 build: off
 test_script:
-- cmd: "%CYG_BASH% -lc 'ansible-playbook /cygdrive/c/projects/ansible-win-aptsimulator/test/integration/default/default.yml --syntax-check'"
-- cmd: "%CYG_BASH% -lc 'ansible-playbook -i /cygdrive/c/projects/ansible-win-aptsimulator/test/appveyor/inventory /cygdrive/c/projects/ansible-win-aptsimulator/test/integration/default/default.yml -vvvv $ANSIBLE_EXTRA_VARS'"
+- cmd: "%CYG_BASH% -lc 'ansible-playbook /cygdrive/c/projects/ansible-win-aptsimulator/test/integration/$SUITE/default.yml --syntax-check'"
+- cmd: "%CYG_BASH% -lc 'ansible-playbook -i /cygdrive/c/projects/ansible-win-aptsimulator/test/appveyor/inventory /cygdrive/c/projects/ansible-win-aptsimulator/test/integration/$SUITE/default.yml -vvvv $ANSIBLE_EXTRA_VARS'"
 
 after_test:
 - cmd: |
-    %CYG_BASH% -lc 'ansible-playbook -i /cygdrive/c/projects/ansible-win-aptsimulator/test/appveyor/inventory /cygdrive/c/projects/ansible-win-aptsimulator/test/integration/default/default.yml $ANSIBLE_EXTRA_VARS'
+    %CYG_BASH% -lc 'ansible-playbook -i /cygdrive/c/projects/ansible-win-aptsimulator/test/appveyor/inventory /cygdrive/c/projects/ansible-win-aptsimulator/test/integration/$SUITE/default.yml $ANSIBLE_EXTRA_VARS'
 - ps: Get-WinEvent -LogName 'Microsoft-Windows-Powershell/Operational' | Select -First 20
 #- ps: Get-MpThreatDetection | Sort InitialDetection -Descending
 
