update aptsimulator to 0.8 and batch mode -b

--- a/tasks/testing-aptsimulator.yml
+++ b/tasks/testing-aptsimulator.yml
@@ -23,7 +23,7 @@
 
 ## FIXME! batch mode?
 - name: Testing Detections | Execute NextronSystems APTSimulator
-  win_command: "cmd.exe /c APTSimulator.bat"
+  win_command: "cmd.exe /c APTSimulator.bat -b"
   args:
     chdir: "{{ win_temp_dir }}\\APTSimulator"
   when: win_aptsimulator_execute
