add option to run as specific admin users

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,6 +46,14 @@ environment:
     CYG_CACHE: C:\cygwin64\var\cache\setup
     CYG_BASH: C:\cygwin64\bin\sh
     ANSIBLE_VERSION: 2.5.1
+    ANSIBLE_EXTRA_VARS: "-e win_aptsimulator_become=true"
+    SUITE: default
+  - TARGET: cygwin64
+    CYG_ROOT: C:\cygwin64
+    CYG_SETUP: C:\cygwin64\setup-x86_64.exe
+    CYG_CACHE: C:\cygwin64\var\cache\setup
+    CYG_BASH: C:\cygwin64\bin\sh
+    ANSIBLE_VERSION: 2.5.1
     ANSIBLE_EXTRA_VARS:
     SUITE: full
 matrix:
