--- a/tasks/testing-aptsimulator.yml
+++ b/tasks/testing-aptsimulator.yml
@@ -36,7 +36,11 @@
     chdir: "{{ win_temp_dir }}\\APTSimulator"
   when: win_aptsimulator_execute
   register: aptsimul
+  ignore_errors: true
+  async: 600
+  poll: 60
+
 - name: Testing Detections | save APTSimulator results to file
   win_copy:
-    content: "{{ aptsimul.stdout }}"
+    content: "{{ aptsimul.stdout | default() }}"
     dest: "{{ win_log_dir }}\\aptsimulator-log.txt"
