--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: win_aptsimulator
   author: juju4
   description: Execute NextronSystems APTSimulator on Windows target
   license: BSD
