--- a/appveyor.yml
+++ b/appveyor.yml
@@ -81,7 +81,7 @@ install:
 - cmd: "%CYG_BASH% -lc 'ansible -i /cygdrive/c/projects/ansible-win-aptsimulator/test/appveyor/inventory -m win_ping -vvv localhost'"
 - cmd: "%CYG_BASH% -lc 'mkdir -p /etc/ansible/roles'"
 - cmd: "%CYG_BASH% -lc 'cp /cygdrive/c/projects/ansible-win-aptsimulator/test/appveyor/ansible.cfg /etc/ansible'"
-- cmd: "%CYG_BASH% -lc 'cp -R /cygdrive/c/projects/ansible-win-aptsimulator /etc/ansible/roles/juju4.win-aptsimulator'"
+- cmd: "%CYG_BASH% -lc 'cp -R /cygdrive/c/projects/ansible-win-aptsimulator /etc/ansible/roles/juju4.win_aptsimulator'"
 
 build: off
 test_script:
