--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -6,4 +6,4 @@
     - win_aptsimulator_dl: true
     - win_aptsimulator_execute: true
   roles:
-    - juju4.win-aptsimulator
+    - juju4.win_aptsimulator
