--- a/tasks/testing-aptsimulator.yml
+++ b/tasks/testing-aptsimulator.yml
@@ -1,6 +1,5 @@
 ---
 # https://github.com/NextronSystems/APTSimulator/
-# https://github.com/NextronSystems/APTSimulator/releases/download/v{{ win_aptsimulator_v }}/APTSimulator_pw_apt.zip
 
 - name: 7-zip installation
   win_chocolatey:
@@ -14,7 +13,8 @@
   register: aptarchive
 - name: Testing Detections | Download NextronSystems APTSimulator
   win_get_url:
-    url: "https://github.com/NextronSystems/APTSimulator/releases/download/v{{ win_aptsimulator_v }}/APTSimulator_pw_apt.zip"
+    url: "https://github.com/NextronSystems/APTSimulator/releases/download/v{{
+            win_aptsimulator_v }}/APTSimulator_pw_apt.zip"
     dest: "{{ win_temp_dir }}\\APTSimulator_pw_apt.zip"
   when: win_aptsimulator_dl and not aptarchive.stat.exists
 
