--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,46 +16,46 @@ environment:
   CYGWIN: winsymlinks:nativestrict
 
   matrix:
-  - TARGET: cygwin64
-    CYG_ROOT: C:\cygwin64
-    CYG_SETUP: C:\cygwin64\setup-x86_64.exe
-    CYG_CACHE: C:\cygwin64\var\cache\setup
-    CYG_BASH: C:\cygwin64\bin\sh
+  - SUITE: default
     ANSIBLE_VERSION: 2.3.3.0
     ANSIBLE_EXTRA_VARS:
-    SUITE: default
-  - TARGET: cygwin64
+    TARGET: cygwin64
     CYG_ROOT: C:\cygwin64
     CYG_SETUP: C:\cygwin64\setup-x86_64.exe
     CYG_CACHE: C:\cygwin64\var\cache\setup
     CYG_BASH: C:\cygwin64\bin\sh
+  - SUITE: default
     ANSIBLE_VERSION: 2.4.3.0
     ANSIBLE_EXTRA_VARS:
-    SUITE: default
-  - TARGET: cygwin64
+    TARGET: cygwin64
     CYG_ROOT: C:\cygwin64
     CYG_SETUP: C:\cygwin64\setup-x86_64.exe
     CYG_CACHE: C:\cygwin64\var\cache\setup
     CYG_BASH: C:\cygwin64\bin\sh
+  - SUITE: default
     ANSIBLE_VERSION: 2.5.1
     ANSIBLE_EXTRA_VARS:
-    SUITE: default
-  - TARGET: cygwin64
+    TARGET: cygwin64
     CYG_ROOT: C:\cygwin64
     CYG_SETUP: C:\cygwin64\setup-x86_64.exe
     CYG_CACHE: C:\cygwin64\var\cache\setup
     CYG_BASH: C:\cygwin64\bin\sh
+  - SUITE: full
     ANSIBLE_VERSION: 2.5.1
     ANSIBLE_EXTRA_VARS:
-    SUITE: full
-  - TARGET: cygwin64
+    TARGET: cygwin64
     CYG_ROOT: C:\cygwin64
     CYG_SETUP: C:\cygwin64\setup-x86_64.exe
     CYG_CACHE: C:\cygwin64\var\cache\setup
     CYG_BASH: C:\cygwin64\bin\sh
+  - SUITE: default
     ANSIBLE_VERSION: 2.5.1
     ANSIBLE_EXTRA_VARS: "-e win_aptsimulator_become=true"
-    SUITE: default
+    TARGET: cygwin64
+    CYG_ROOT: C:\cygwin64
+    CYG_SETUP: C:\cygwin64\setup-x86_64.exe
+    CYG_CACHE: C:\cygwin64\var\cache\setup
+    CYG_BASH: C:\cygwin64\bin\sh
 matrix:
   fast_finish: true
 
