--- a/appveyor.yml
+++ b/appveyor.yml
@@ -113,6 +113,14 @@ after_test:
 on_finish:
 - ps: Get-ChildItem -Path "C:\Program Files\ansible" -Recurse
 
+on_failure:
+- ps: |
+    Get-ChildItem C:\ -recurse -file |ForEach-Object {if($_ -match '.+?exe$') {Get-AuthenticodeSignature $_.fullname}} | where {$_.IsOSBinary} |ForEach-Object { write-host $_.path }
+    True
+- ps: |
+    Get-WinEvent -LogName 'Microsoft-Windows-AppLocker/EXE and DLL' | Where { $_.ID -eq 8004 }
+    True
+
 notifications:
 - provider: Email
   to:
