--- a/tasks/testing-aptsimulator-detections.yml
+++ b/tasks/testing-aptsimulator-detections.yml
@@ -13,14 +13,14 @@
     - name: testing | run aptsimulator-baseline (very slow...)
       win_command: "c:\\opscode\\inspec\\bin\\inspec.bat exec
                     https://github.com/juju4/aptsimulator-baseline >{{ win_log_dir }}\\inspec-aptsimulator.log"
-      ignore_errors: true
+      failed_when: false
       async: 3600
       poll: 120
 
     - name: testing | inspec results
       win_shell: "Get-Content -Path \"{{ win_log_dir }}\\inspec-aptsimulator.log\""
       changed_when: false
-      ignore_errors: true
+      failed_when: false
       when: win_aptsimulator_testing_inspec_display_log
 
   when: win_aptsimulator_testing_inspec
