--- a/test/integration/full/default.yml
+++ b/test/integration/full/default.yml
@@ -12,5 +12,5 @@
     - juju4.win_audit
     # - juju4.win_applocker
     # - juju4.win_sysmon
-    # - juju4.win_osquery
+    - juju4.win_osquery
     - juju4.win_aptsimulator
